Add save/load functionality

--- a/templates/storyTemplate.html
+++ b/templates/storyTemplate.html
@@ -39,3 +39,9 @@
 {% if url != "0" %}
 <a href="{{ url }}/storysofar">See the story so far!</a>
 {% endif %}
+<form action="#" method="post">
+    <input type="submit" name="save" value="Save" />
+</form>
+<form action="0" method="post">
+    <input type="submit" name="load" value="Load" />
+</form>
